--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,31 @@
-<%= form_with model: @user do |f| %>
-  <%= f.label :uid, 'UID' %>
-  <%= f.text_field :uid %>
-  <%= f.label :pass, 'PASS' %>
-  <%= f.text_field :pass %>
-  <%= f.submit '登録' %>
+<h1>ユーザー新規登録</h1>
+
+<%# エラーがあった場合にメッセージを表示 %>
+<% if @user.errors.any? %>
+  <div style="color: red;">
+    <h2><%= @user.errors.count %>件のエラーがあります:</h2>
+    <ul>
+      <% @user.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  </div>
 <% end %>
+
+<%= form_with(model: @user) do |form| %>
+  <div>
+    <%= form.label :uid, 'ユーザーID' %><br>
+    <%= form.text_field :uid %>
+  </div>
+
+  <div>
+    <%= form.label :password, 'パスワード' %><br>
+    <%= form.password_field :password %>
+  </div>
+
+  <div>
+    <%= form.submit '登録' %>
+  </div>
+<% end %>
+
+<%= link_to 'ユーザー一覧に戻る', users_path %>
