--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,29 @@
-<% @users.each do |e| %>
-    <%= e.uid %>
-    <%= e.pass %><br>
+<h1>ユーザー一覧</h1>
+
+<%# noticeメッセージがある場合に表示 %>
+<% if flash[:notice] %>
+  <p style="color: green;"><%= flash[:notice] %></p>
 <% end %>
 
-<%= link_to "新規追加",new_user_path %>
+<table>
+  <thead>
+    <tr>
+      <th>ユーザーID</th>
+      <th colspan="1"></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @users.each do |user| %>
+      <tr>
+        <td><%= user.uid %></td>
+        <td><%= link_to '削除', user_path(user), data: { turbo_method: :delete, turbo_confirm: '本当に削除しますか？' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
-    
+<br>
+
+<%= link_to '新規ユーザー登録', new_user_path %>
+<br>
+<%= link_to 'トップページに戻る', root_path %>
