--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,6 +21,8 @@
   <div>
     <%= form.label :password, 'パスワード' %><br>
     <%= form.password_field :password %>
+    <%= form.label :password_confirmation, 'パスワード(確認)' %>
+    <%= form.text_field :password_confirmation %>
   </div>
 
   <div>
